Make samples work with Pekko 2 and next Play milestone